# persona-chatbot

./: .dockerignore  .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/: DEMO.md
.github/workflows/: pre-commit.yml
alembic/: env.py
alembic/versions/: 5d6b4c8a91f2_add_avatar_temperature.py  6c41a059cb91_create_tables.py
docs/: design.md
persona_chatbot/: __main__.py  settings.py
persona_chatbot/api/: app.py  dependencies.py  lifecycle.py
persona_chatbot/api/dependencies/: common.py  telegram.py
persona_chatbot/api/routers/: internal.py  telegram.py
persona_chatbot/bot/: app.py
persona_chatbot/bot/callbacks/: __init__.py  avatar.py  facts.py  menu.py
persona_chatbot/bot/keyboards/: __init__.py  avatar.py  facts.py  menu.py
persona_chatbot/bot/middlewares/: __init__.py  avatar.py  chat.py  session.py  (+3 more)
persona_chatbot/common/: __init__.py  constants.py  enums.py
persona_chatbot/db/: base.py  session.py
persona_chatbot/dto/: __init__.py  avatar.py  base.py  chat.py  llm.py  memory.py  message.py  user.py
persona_chatbot/llm/: client.py
persona_chatbot/logging/: __init__.py  config.py  middleware.py
persona_chatbot/schemas/: __init__.py  memory.py  telegram.py
persona_chatbot/services/: __init__.py  avatar.py  chat.py  memory.py  user.py
persona_chatbot/settings/: __init__.py  api.py  common.py  db.py  worker.py
persona_chatbot/templates/: __init__.py  renderer.py
persona_chatbot/worker/: app.py  dependencies.py  lifecycle.py  queues.py
scripts/: seed_avatar.py
(+51 files in other folders)
