[project]
name = "persona-chatbot"
version = "0.1.0"
description = "LLM-based chatbot, for chatting with different persons."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.26.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "faststream[redis]>=0.6.7",
    "greenlet>=3.3.2",
    "jinja2>=3.1.6",
    "openai>=2.28.0",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]
